--- a/index.html
+++ b/index.html
@@ -23,115 +23,115 @@
 
 <!-- Header -->
 	<body>
-	<header>
-		<div class = "container">
-			<h1>Stephanie Yip</h1>
 
-			<!-- Navigation Bar -->
-			<nav>
-					<label for = "responsiveMenu"">&#9776</label>
-					<input type = "checkbox" id="responsiveMenu"/>
-					<div class = "menu">
-					 <!--<div class = "menuDivider"></div>-->
-					<ul>
-						<li class = "active"><a href = "index.html">Home</a></li>
-						<li><a href = "#">Résumé</a></li>
-						<li><a href = "#" >Projects</a></li>
-						<li><a href = "#">Photography</a></li>
-						<li><a href = "contact.html">Contact</a></li>
-					</ul>
+		<header>
+			<div class = "container">
+				<h1>Stephanie Yip</h1>
+
+				<!-- Navigation Bar -->
+				<nav>
+						<label for = "responsiveMenu"">&#9776</label>
+						<input type = "checkbox" id="responsiveMenu"/>
+						<div class = "menu">
+						 <!--<div class = "menuDivider"></div>-->
+						<ul>
+							<li class = "active"><a href = "index.html">Home</a></li>
+							<li><a href = "#">Résumé</a></li>
+							<li><a href = "#" >Projects</a></li>
+							<li><a href = "#">Photography</a></li>
+							<li><a href = "contact.html">Contact</a></li>
+						</ul>
+					</div>
+
+				</nav>
+			</div>
+		</header>
+
+	<!-- Page Title Block -->
+		<section id = "home">
+
+			<div class = "container">
+				<section class = "pgTitleBlock">
+
+				<div class = "darkenOverlay"></div>
+					<h1>Hello</h1>
+				</section>
+			</div>
+
+		</section>
+
+	<!-- About: Bulletpoints -->
+		<section id = "about-bullets">
+
+	<!--
+			<div class = "bulletContainer">
+				<div class = "leftContainer leftText">
+					<div class = "left1">I am</div>
+					<div class = "left2">I studied</div>
+					<div class = "left3">I like</div>
+					<div class = "left4">Long story short</div>
 				</div>
 
-			</nav>
-		</div>
-	</header>
+				<div class = "rightContainer rightText">
+					<div class = "right1">Stephanie Yip</div>
+					<div class = "right2">Electrical and Computer Engineering</div>
+					<div class = "right3">Embedded Devices, Internet of Things, Integrating Hardware and Software</div>
+					<div class = "right4">I am a recent college grad trying to learn new things.</div>
+				</div>
+	-->
+			<div class = "bulletContainer">
+				<div class = "titleText">I am</div>
+				<div class = "subtitleText">Stephanie Yip</div>
 
-<!-- Page Title Block -->
-	<section id = "home">
+				<div class = "titleText">I studied</div>
+				<div class = "subtitleText">Electrical and Computer Engineering</div>
 
-		<div class = "container">
-			<section class = "pgTitleBlock">
+				<div class = "titleText">I like</div>
+				<div class = "subtitleText">Embedded devices, Internet of things, Integrating
+					hardware and software</div>
 
-			<div class = "darkenOverlay"></div>
-				<h1>Hello</h1>
-			</section>
-		</div>
+				<div class = "titleText">Long story short</div>
+				<div class = "subtitleText">I am a recent college grad trying to learn new things.</div>
 
-	</section>
-
-<!-- About: Bulletpoints -->
-	<section id = "about-bullets">
-
-<!--
-		<div class = "bulletContainer">
-			<div class = "leftContainer leftText">
-				<div class = "left1">I am</div>
-				<div class = "left2">I studied</div>
-				<div class = "left3">I like</div>
-				<div class = "left4">Long story short</div>
 			</div>
 
-			<div class = "rightContainer rightText">
-				<div class = "right1">Stephanie Yip</div>
-				<div class = "right2">Electrical and Computer Engineering</div>
-				<div class = "right3">Embedded Devices, Internet of Things, Integrating Hardware and Software</div>
-				<div class = "right4">I am a recent college grad trying to learn new things.</div>
+
+			<!-- Line divider -->
+			<div class = "line"></div>
+		</section>
+
+	<!-- About: Writing -->
+		<section id = "about-writing">
+			<div class = "container">
+				<div class = "mainContent">
+					<h1>About Me</h1>
+					<p>I graduated from Seattle University in 2017 with a B.S. in Electrical
+						and Computer Engineering. The area that fascinates me the most is the
+						integration of hardware and software. I enjoy working on projects that
+						more or less combine the two fields I studied in college– electrical
+						engineering and computer science. Lately, I have also been interested
+						in learning more about software and technology further up the stack.
+					 </p>
+
+					<h1>About This Website</h1>
+					<p>I have spent the past decade trying to learn HTML
+				 and CSS to create my own themes on various websites, starting with Neopets
+				 in elementary school. Now that I have more free time and experience in
+				 computer science, I decided to buckle down and finally understand how this
+				 all works. </p>
+
+					<p>This website serves as a portfolio of my engineering projects and
+						experiences. In my free time, I dabble in photography and have
+						included that here as well.</p>
+				</div>
 			</div>
--->
-		<div class = "bulletContainer">
-			<div class = "titleText">I am</div>
-			<div class = "subtitleText">Stephanie Yip</div>
 
-			<div class = "titleText">I studied</div>
-			<div class = "subtitleText">Electrical and Computer Engineering</div>
-
-			<div class = "titleText">I like</div>
-			<div class = "subtitleText">Embedded devices, Internet of things, Integrating
-				hardware and software</div>
-
-			<div class = "titleText">Long story short</div>
-			<div class = "subtitleText">I am a recent college grad trying to learn new things.</div>
-
-		</div>
+		</section>
 
 
-		<!-- Line divider -->
-		<div class = "line"></div>
-	</section>
-
-<!-- About: Writing -->
-	<article id = "about-writing">
-		<div class = "container">
-			<div class = "mainContent">
-				<h1>About Me</h1>
-				<p>I graduated from Seattle University in 2017 with a B.S. in Electrical
-					and Computer Engineering. The area that fascinates me the most is the
-					integration of hardware and software. I enjoy working on projects that
-					more or less combine the two fields I studied in college– electrical
-					engineering and computer science. Lately, I have also been interested
-					in learning more about software and technology further up the stack.
-				 </p>
-
-				<h1>About This Website</h1>
-				<p>I have spent the past decade trying to learn HTML
-			 and CSS to create my own themes on various websites, starting with Neopets
-			 in elementary school. Now that I have more free time and experience in
-			 computer science, I decided to buckle down and finally understand how this
-			 all works. </p>
-
-				<p>This website serves as a portfolio of my engineering projects and
-					experiences. In my free time, I dabble in photography and have
-					included that here as well.</p>
-			</div>
-		</div>
-
-	</article>
-
-
-<!-- Footer -->
-	<footer>
-		<div class = "container">
-
+	<!-- Footer -->
+		<footer>
+			<div class = "container">
 				<div class = "socialMediaIcons">
 					<!--
 					<a href = "mailto:stephaniekyyip@gmail.com?subject=E-mailing%20From%20Your%20Website"><span class = "socicon-mail"></span></a>
@@ -174,11 +174,10 @@
 					<li><a href = "https://www.linkedin.com/in/stephaniekyyip/">LinkedIn</a></li>
 
 					<li><a href = "https://github.com/stephaniekyyip">GitHub</a></li>
-
 				</ul>
 			</div>
-	</div>
-	</footer>
+		</div>
+		</footer>
 
 
 	</body>
