First commit of resume.html.

--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
 		<meta charset = "UTF-8">
 		<meta name="viewport" content="width=device-width initial-scale=1.0" />
 
-		<title> Stephanie Yip | Computer Engineer | Home </title>
+		<title> Stephanie Yip | Contact </title>
 
 		<link rel= "stylesheet" href="css/style.css"/>
 
@@ -36,9 +36,9 @@
 						 <!-- <div class = "menuDivider"></div> -->
 						<ul>
 							<li><a href = "index.html">Home</a></li>
-							<li><a href = "#">Résumé</a></li>
-							<li><a href = "#" >Projects</a></li>
-							<li><a href = "#">Photography</a></li>
+							<li><a href = "resume.html">Résumé</a></li>
+							<li><a href = "projects.html" >Projects</a></li>
+							<li><a href = "photography.html">Photography</a></li>
 							<li class = "active"><a href = "contact.html">Contact</a></li>
 						</ul>
 					</div>
