--- a/resume.html
+++ b/resume.html
@@ -1,1 +1,192 @@
 
+<!DOCTYPE html>
+<!--
+	Website by Stephanie Yip, 2018
+
+	Icons from Font Awesome, https://fontawesome.com
+	Contact form powered by Formspree, https://formspree.io/
+
+-->
+<html>
+
+	<head>
+		<meta charset = "UTF-8">
+		<meta name="viewport" content="width=device-width initial-scale=1.0" />
+
+		<title> Stephanie Yip | Computer Engineer | Home </title>
+
+		<link rel= "stylesheet" href="css/style.css"/>
+
+		<script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js" integrity="sha384-SlE991lGASHoBfWbelyBPLsUlwY1GwNDJo3jSJO04KZ33K2bwfV9YBauFfnzvynJ" crossorigin="anonymous"></script>
+		<!--<link rel="stylesheet" href="https://s3.amazonaws.com/icomoon.io/114779/Socicon/style.css?u8vidh">-->
+	</head>
+
+
+<!-- Header -->
+	<body>
+
+		<header>
+			<div class = "container">
+				<h1>Stephanie Yip</h1>
+
+				<!-- Navigation Bar -->
+				<nav>
+						<label for = "responsiveMenu"> &#9776 </label>
+						<input type = "checkbox" id="responsiveMenu">
+						<div class = "menu">
+						 <!--<div class = "menuDivider"></div>-->
+						<ul>
+							<li><a href = "index.html">Home</a></li>
+							<li class = "active"><a href = "resume.html">Résumé</a></li>
+							<li><a href = "#" >Projects</a></li>
+							<li><a href = "#">Photography</a></li>
+							<li><a href = "contact.html">Contact</a></li>
+						</ul>
+					</div>
+
+				</nav>
+			</div>
+		</header>
+
+	<!-- Page Title Block -->
+		<section id = "resumeTitle">
+
+			<div class = "container">
+				<section class = "pgTitleBlock">
+
+				<div class = "darkenOverlay"></div>
+					<h1>Résumé</h1>
+				</section>
+			</div>
+
+		</section>
+
+	<!-- Main Content: Resume-->
+  <section id = "resume">
+  	<div class = "container">
+  	   <div class = "mainContent">
+				 <button class = "downloadButton">See Resume in PDF</button>
+
+				   <div class = "line"></div>
+          <!-- Education -->
+          <section id = "education">
+            <h1>Education</h1>
+
+						<div class = "resumeContent"><span class = "resumeHeading">Seattle University</span>
+							Seattle, WA
+            <span class = "resumeRight">Sept. 2013 - Jun. 2017</span>
+						<br>B.S. in Electrical Engineering, Computer Engineering Specialization
+						<span class = "resumeRight">GPA: 3.6</span>
+					</div>
+
+            <!-- Honors -->
+            <section>
+              <h2>Academic Honors</h2>
+							<ul>
+								<li>Graduated <i>cum laude</i></li>
+								<li><a href = "https://www.tbp.org/home.cfm">Tau Beta Pi - Washington Gamma Chapter</a></li>
+								<li><a href = "https://hkn.ieee.org/">IEEE Eta Kappa Nu - Mu Iota Chapter</a></li>
+							</ul>
+            </section>
+
+            <!-- Coursework -->
+            <section>
+              <h2>Computer Science Coursework</h2>
+							<div class = "resumeContent">Data Structures, Design and Analysis of Algorithms,
+								Computer Systems
+							</div>
+
+							<h2>Electrical/ Computer Engineering Coursework</h2>
+							<div class = "resumeContent">Embedded Systems, Microprocessor Design, Internet of Things,
+								Machine Learning, Electrical Circuits, Semiconductor Devices/ Circuits, Signals and Systems
+							</div>
+						</section>
+
+          </section>
+
+          <div class = "line"></div>
+
+          <!-- Technical Skills  -->
+					<section id = "techSkills">
+						<h1>Technical Skills</h1>
+
+						<span class = "resumeHeading">Programming Languages</span>
+
+						<br>
+
+						<span class = "resumeHeading">Lab Experience</span>
+
+						<br>
+
+						<span class = "resumeHeading">Tools</span>
+
+
+					</section>
+
+					<div class = "line"></div>
+
+          <!-- Work Experience  -->
+
+          <!-- Projects  -->
+
+          <!-- Student Organization -->
+
+
+  	    </div>
+  	</div>
+  </section>
+
+
+	<!-- Footer -->
+		<footer>
+			<div class = "container">
+				<div class = "socialMediaIcons">
+					<!--
+					<a href = "mailto:stephaniekyyip@gmail.com?subject=E-mailing%20From%20Your%20Website"><span class = "socicon-mail"></span></a>
+					<a href = "https://www.linkedin.com/in/stephaniekyyip/"><span class = "socicon-linkedin"></span></a>
+					<a href = "https://github.com/stephaniekyyip"><span class = "socicon-github"></span></a>
+				-->
+				<a href = "mailto:stephaniekyyip@gmail.com?subject=E-mailing%20From%20Your%20Website">
+					<div style="font-size: 18px; color: white; padding-right: 20px; padding-left: 20px; padding-top:20px; display: inline" alt="envelope">
+						<span class="fas fa-envelope"></span>
+				  </div>
+				</a>
+
+				<a href = "https://www.linkedin.com/in/stephaniekyyip/">
+					<div style="font-size: 18px; color: white; padding-right: 20px; padding-left: 20px; padding-top:20px; display: inline" alt="linkedin logo">
+						<span class="fab fa-linkedin"></span>
+					</div>
+				</a>
+
+				<a href = "https://github.com/stephaniekyyip">
+					<div style="font-size: 18px; color: white; padding-right: 20px; padding-left: 20px; padding-top:20px; display: inline" alt="github logo">
+						<span class="fab fa-github"></span>
+					</div>
+				</a>
+
+					<!--<h1>Design by Stephanie Yip. Icons from <a href="http://socicon.com">Socicon</a>.</h1>-->
+					<h1>Website by Stephanie Yip 2018</h1>
+				</div>
+
+				<div class = "socialLinks">
+					<h1>Website by Stephanie Yip 2018</h1>
+					<ul>
+						<li><script language="Javascript">
+							var username = "stephaniekyyip";
+							var hostname = "gmail.com";
+							var subject = "E-mailing%20From%20Your%20Website";
+							document.write("<a href = '" + "mail" + "to:" + username + "@" + hostname
+							+ "?subject=" + subject + "'>" + "E-mail" + "</a> ");
+						</script></li>
+
+					<li><a href = "https://www.linkedin.com/in/stephaniekyyip/">LinkedIn</a></li>
+
+					<li><a href = "https://github.com/stephaniekyyip">GitHub</a></li>
+				</ul>
+			</div>
+		</div>
+		</footer>
+
+
+	</body>
+</html>
