--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 	<head>
 		<meta charset = "UTF-8">
 		<meta name="viewport" content="width=device-width initial-scale=1.0" />
+		<meta name="description" content="Portfolio website of a computer engineer, Stephanie Yip">
 
-		<title> Stephanie Yip | Computer Engineer | Home </title>
+		<title> Stephanie Yip | Home </title>
 
 		<link rel= "stylesheet" href="css/style.css"/>
 
@@ -36,7 +37,7 @@
 						 <!--<div class = "menuDivider"></div>-->
 						<ul>
 							<li class = "active"><a href = "index.html">Home</a></li>
-							<li><a href = "#">Résumé</a></li>
+							<li><a href = "resume.html">Résumé</a></li>
 							<li><a href = "#" >Projects</a></li>
 							<li><a href = "#">Photography</a></li>
 							<li><a href = "contact.html">Contact</a></li>
