First draft of Resume done. Changed jumbotron img. Organized img folder.

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 				<div class = "rightContainer rightText">
 					<div class = "right1">Stephanie Yip</div>
 					<div class = "right2">Electrical and Computer Engineering</div>
-					<div class = "right3">Embedded Devices, Internet of Things, Integrating Hardware and Software</div>
+					<div class = "right3">Integrating Hardware and Software, Embedded Devices, Internet of Things </div>
 					<div class = "right4">I am a recent college grad trying to learn new things.</div>
 				</div>
 	-->
@@ -88,8 +88,8 @@
 				<div class = "subtitleText">Electrical and Computer Engineering</div>
 
 				<div class = "titleText">I like</div>
-				<div class = "subtitleText">Embedded devices, Internet of things, Integrating
-					hardware and software</div>
+				<div class = "subtitleText">Integrating Hardware and Software,
+					Embedded Devices, Internet of Things </div>
 
 				<div class = "titleText">Long story short</div>
 				<div class = "subtitleText">I am a recent college grad trying to learn new things.</div>
@@ -109,8 +109,8 @@
 					<p>I graduated from Seattle University in 2017 with a B.S. in Electrical
 						and Computer Engineering. The area that fascinates me the most is the
 						integration of hardware and software. I enjoy working on projects that
-						more or less combine the two fields I studied in college– electrical
-						engineering and computer science. Lately, I have also been interested
+						involve both electrical engineering and computer science and seeing
+						how the two fields interact with one another. Lately, I have also been interested
 						in learning more about software and technology further up the stack.
 					 </p>
 
