Done with sidebar nav + responsive sidebar in Resume

--- a/resume.html
+++ b/resume.html
@@ -65,12 +65,24 @@
 	<aside id = "resumeSidebar">
 
 		<ul>
-			<li>Education</li>
-			<li>Skills</li>
-			<li>Work Experience</li>
-			<li>Leadership Experience</li>
-			<li>Featured Projects</li>
+			<!--<li>Jump to . . .</li>-->
+			<a href="#education"><li>Education</li></a>
+			<a href="#techSkills"><li>Skills</li></a>
+			<a href="#workExperience"><li>Work Experience</li></a>
+			<a href="#studentOrg"><li>Leadership Experience</li></a>
+			<a href="#projects"><li>Featured Projects</li></a>
+			<a href="#resumeTitle"><li>Back to Top &uarr;</li></a>
 		</ul>
+
+	</aside>
+
+	<aside id = "responsiveSidebar">
+		<a href="#education"><div class = "circle"></div></a>
+		<a href="#techSkills"><div class = "circle"></div></a>
+		<a href="#workExperience"><div class = "circle"></div></a>
+		<a href="#studentOrg"><div class = "circle"></div></a>
+		<a href="#projects"><div class = "circle"></div></a>
+
 	</aside>
 
 	<!-- Main Content: Resume-->
