Text changes + font size to Resume. Last commit before starting Projects

--- a/resume.html
+++ b/resume.html
@@ -138,13 +138,13 @@
 
 						<h2>Programming Languages</h2>
 						<div class = "resumeContent">C++, C, HTML, CSS, Python,
-							Javascript, PHP, MATLAB, VHDL
+							JavaScript, MATLAB, VHDL
 						</div>
 
 						<h2>Lab Experience</h2>
 						<div class = "resumeContent">
 							Soldering, reading schematics, prototyping circuits, digital multimeters,
-							oscilloscopes, Altera FPGA board, Raspberry Pi, Arduino, ESP8266
+							oscilloscopes, Altera FPGA boards, Raspberry Pi, Arduino, ESP8266
 						</div>
 
 						<h2>Software</h2>
@@ -182,7 +182,7 @@
 							<ul>
 								<li>Contributed to the development of a proximity sensor using an ARM microcontroller</li>
 								<li>Used MATLAB and an oscilloscope for signal processing testing and verification</li>
-								<li>Modified and debugged embedded software code in C to operate the analog-to-digital converter (ADC) and digital-to-analog converter (DAC) on the microcontroller</li>
+								<li>Modified and debugged embedded software code in C to operate the analog to digital converter (ADC) and digital to analog converter (DAC) on the microcontroller</li>
 							</ul>
 						</div>
 
@@ -201,15 +201,21 @@
 							<div class = "resumeLocation">Seattle University</div>
 							<span class = "resumeRight">Sept. 2016 - Jun. 2017</span>
 							<ul>
-								<li>Manage club finances and budget, organize events, and mentor new officers</li>
+								<li>Managed finances and budget, participated in fundraising, and mentored new officers</li>
 							</ul>
 						</div>
 
 						<div class = "resumeContent"><span class = "resumeHeading">Regional Collegiate Communications Editor (RCCE)</span>
 							<span class = "resumeRight">Sept. 2016 - Jun. 2017</span>
 							<ul>
-								<li>Update the regional SWE blog with helpful academic and career information for regional members</li>
-								<li>Communicate and connect with other regional leaders and members through e-mail regularly</li>
+								<li>Wrote content for the <a href = "https://regionj.wordpress.com/">Region J SWE blog</a>
+									about news and tips for increasing SWE involvement</li>
+								<ul>
+									<li> Blog Posts: <a href = "https://regionj.wordpress.com/2017/02/20/fy17-rcce-introduction/">Introduction</a>,
+										<a href = "https://regionj.wordpress.com/2017/02/27/rcr-introduction-university-of-portland-feature/">Industry Panels</a>,
+										<a href = "https://regionj.wordpress.com/2017/05/23/end-of-rcce-term-collegiate-section-features-george-fox-oregon-state/">End of Year</a> </li>
+								</ul>
+								<li>Communicated with other regional leaders and members through e-mail and Skype calls</li>
 							</ul>
 						</div>
 
@@ -218,7 +224,7 @@
 							<span class = "resumeRight">Sept. 2015 - Jun. 2016</span>
 							<ul>
 								<li>Organized resume review event with about 12 engineering professionals and 40 students attending</li>
-								<li>Regularly updated school website and collaborated with other officers</li>
+								<li>Regularly updated school website with events and news</li>
 							</ul>
 						</div>
 
