First commit for Projects. Fixed sticky footer for Contact.

--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
 
 				<!-- Navigation Bar -->
 				<nav>
-						<label for = "responsiveMenu">&#9776</label>
+						<label for = "responsiveMenu">&#9776;</label>
 						<input type = "checkbox" id="responsiveMenu"/>
 						<div class = "menu">
 						 <!-- <div class = "menuDivider"></div> -->
@@ -61,7 +61,7 @@
 		</section>
 
 	<!--Main Content -->
-	<div class = "wrapper">
+<!--	<div class = "wrapper"> -->
 	<section class = "mainContent contactText">
 
 	<!--	<div class = "container"> -->
@@ -123,7 +123,7 @@
 			<div class = "formCredit">Form powered by <a href = "https://formspree.io/">Formspree</a></div>
 	<!--	</div> .container div-->
 	</section>
-</div>
+<!--</div>-->
 
 	<!-- Footer -->
 		<footer>
