--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
 
 				<!-- Navigation Bar -->
 				<nav>
-						<label for = "responsiveMenu"">&#9776</label>
+						<label for = "responsiveMenu"> &#9776;</label>
 						<input type = "checkbox" id="responsiveMenu"/>
 						<div class = "menu">
 						 <!--<div class = "menuDivider"></div>-->
 						<ul>
 							<li class = "active"><a href = "index.html">Home</a></li>
 							<li><a href = "resume.html">Résumé</a></li>
-							<li><a href = "#" >Projects</a></li>
+							<li><a href = "projects.html" >Projects</a></li>
 							<li><a href = "#">Photography</a></li>
 							<li><a href = "contact.html">Contact</a></li>
 						</ul>
