--- a/resume.html
+++ b/resume.html
@@ -38,7 +38,7 @@
 						<ul>
 							<li><a href = "index.html">Home</a></li>
 							<li class = "active"><a href = "resume.html">Résumé</a></li>
-							<li><a href = "#" >Projects</a></li>
+							<li><a href = "projects.html" >Projects</a></li>
 							<li><a href = "#">Photography</a></li>
 							<li><a href = "contact.html">Contact</a></li>
 						</ul>
